++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject 0.8.6
===============

* A number of changes ported from `SQLObject 0.7.9`_.

SQLObject 0.8.5
===============

Released 25 July 2007.

Bug Fixes
---------

* Run post_funcs after sending RowCreatedSignal.

* Suppress the second RowUpdateSignal in .set() called from ._SO_setValue().

* A number of bugfixes ported from `SQLObject 0.7.8`_.

SQLObject 0.8.4
===============

Released 10 May 2007.

Bug Fixes
---------

* A number of bugfixes forward-ported from 0.7.7.

SQLObject 0.8.3
===============

Released 3 May 2007.

Bug Fixes
---------

* A number of bugfixes forward-ported from 0.7.6.

SQLObject 0.8.2
===============

Released 11 Apr 2007.

Bug Fixes
---------

* Fixed ConnectionHub.doInTransaction() - if the original connection was
  processConnection - reset processConnection, not threadConnection.

SQLObject 0.8.1
===============

Released 19 Mar 2007.

Bug Fixes
---------

* ID columns are reverted back from INT UNSIGNED to INT for MySQL to be in
  accord with FOREIGN KEYs.

* Fixed return value from Firebird/MaxdbConnection.createTable().

* Fixed and simplified DatabaseIndex.get().

* Fixed ConnectionHub.doInTransaction() - close low-level connection on
  commit() to prevent connections leaking.

SQLObject 0.8.0
===============

Released 12 Feb 2007.

Features & Interface
--------------------

* It is now possible to create tables that reference each other.
  Constraints (in the DBMSes that support constraints) are added after the
  tables have been created.

* Added ``createSQL`` as an option for sqlmeta. Here you can add
  related SQL you want executed by sqlobject-admin create after table
  creation. createSQL expects a string, list, or dictionary. If using
  a dictionary the key should be a dbName value (ex. 'postgres') and
  the value should be a string or list.  Examples in
  sqlobject/tests/test_sqlobject_admin.py or at